# mddriver

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/: type_traits.hpp
include/integrators/: rk4.h  rk45.h
include/pulses/: gaussian_envolope.h  pulse.h
scripts/: plot_lorenz_attractor_dat.gnu
src/: CMakeLists.txt
src/pulses/: gaussian_envolope.cpp
test/: CMakeLists.txt  rk4-lorenz.cpp  rk45-lorenz.cpp  test_gaussian_envolope.cpp
